--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#services" style="color: white; margin-right: 20px;">Servicios</a>
+                    <a class="nav-link" href="#services" style="color: black; margin-right: 20px;">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#gallery" style="color: white; margin-right: 20px;">Portafolio</a>
+                    <a class="nav-link" href="#gallery" style="color: black; margin-right: 20px;">Portafolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about" style="color: white; margin-right: 20px;">Sobre Mi</a>
+                    <a class="nav-link" href="#about" style="color: black; margin-right: 20px;">Sobre Mi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact" style="color: white; margin-right: 20px;">Contacto</a>
+                    <a class="nav-link" href="#contact" style="color: black; margin-right: 20px;">Contacto</a>
                 </li>
             </ul>
         </div>
